# daemon-quiroscopio

./: .gitignore  Cargo.toml  README.md  best_pipeline__time+fft__svm_rbf.onnx  build.rs  classes.json
gesto-drop/: 000002_plot.csv  000003_plot.csv  000005_plot.csv  000007_plot.csv  000009_plot.csv  000010_plot.csv  000012_plot.csv  000013_plot.csv  000014_plot.csv  000016_plot.csv  000018_plot.csv  000019_plot.csv  000021_plot.csv  000022_plot.csv  000023_plot.csv  000024_plot.csv  000026_plot.csv  000027_plot.csv  000028_plot.csv  000029_plot.csv  000031_plot.csv  000032_plot.csv  000033_plot.csv  000034_plot.csv  000036_plot.csv  000040_plot.csv  000041_plot.csv  000043_plot.csv  000045_plot.csv  000046_plot.csv  000047_plot.csv  000050_plot.csv  000051_plot.csv  000052_plot.csv  000054_plot.csv  000056_plot.csv  000059_plot.csv  000060_plot.csv  000061_plot.csv  000064_plot.csv  (+78 more)
gesto-grab/: 000001_plot.csv  000005_plot.csv  000006_plot.csv  000010_plot.csv  000011_plot.csv  000012_plot.csv  000014_plot.csv  000020_plot.csv  000021_plot.csv  000022_plot.csv  000026_plot.csv  000027_plot.csv  000028_plot.csv  000029_plot.csv  000033_plot.csv  000034_plot.csv  000038_plot.csv  000039_plot.csv  000041_plot.csv  000045_plot.csv  000048_plot.csv  000049_plot.csv  000051_plot.csv  000052_plot.csv  000053_plot.csv  000054_plot.csv  000056_plot.csv  000059_plot.csv  000060_plot.csv  000061_plot.csv  000063_plot.csv  000065_plot.csv  000066_plot.csv  000067_plot.csv  000069_plot.csv  000070_plot.csv  000071_plot.csv  000072_plot.csv  000073_plot.csv  000076_plot.csv  (+64 more)
(+1192 files in other folders)
