[package]
name = "onnx-predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
numpy = "0.21"
csv = "1.3"
anyhow = "1"
serde_json = "1"
dbus = "0.9.7"
crossbeam-channel = "0.5"
uinput = "0.1"
nix = { version = "0.27", features = ["term"] }
evdev = "0.12"